# ai-model-cpp

./: CMakeLists.txt  README.md  configure.sh  requirements.txt
pytorch/: CMakeLists.txt  load.cc  save.py
tensorflow/: CMakeLists.txt  conv.py  load.cc  save.py
